Quorum3/Library/Tests/Actions/Pass/MultipleClassReturnMixedTypes.quorum
class Main
    action Main
        i = 1
        repeat 5 times
            output foo(i)
            i = i + 1
        end
    end

    action foo (integer a) returns text
        if a = 1
            return "Spring" + bar(a)
        elseif a = 2
            return "Summer" + bar(a)
        elseif a = 3
            return "Fall" + bar(a)
        else
            return "Winter" + bar(a)
        end
    end

    action bar(integer t) returns text
        if t = 1
            return "" + 10 + t
        elseif t = 2
            return "" + 12
        elseif t = 3
            return "" + t * 10
        end
        return "0" + t
    end
end